[package]
name = "nextdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["process", "ptrace", "signal"] }
gimli = { version = "0.28.1", features = ["std", "read"] }